--- a/HDFSUpload/pom.xml
+++ b/HDFSUpload/pom.xml
@@ -20,6 +20,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-collections4</artifactId>
+      <version>4.2</version>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-common -->
     <dependency>
       <groupId>org.apache.hadoop</groupId>
